export class SKUVariationModel {
  id: bigint;
  skuId: bigint;
  variationId: number;
  createdAt: Date;
}
