export class VariationItemModel {
  id: number;
  description: string;
  variationId: number;
  active: boolean;
  createdAt: Date;
  updatedAt: Date;
  deletedAt?: Date;
}
