Project BuyonCatalog {
  database_type: 'PostgreSQL'
  note: '''
  # Buyon Marketplace Catalog Database API
  '''
}

Table User {
  id        uuid            [pk]
  firstname varchar   (50)  [not null]
  lastname  varchar   (50)  [not null]
  email     varchar   (100) [not null]
  password  varchar   (150) [not null]
  active    boolean         [not null, default: true]
  createdAt timestamp       [not null]
  updatedAt timestamp       [not null]
  deletedAt timestamp

  Note: 'User registered in the system, can be a customer or a admin'
}

Table Product {
  id          int           [pk, increment]
  name        varchar (50)  [not null]
  description varchar (100) [not null]
  slug        varchar (50)  [not null, unique]
  active      boolean       [not null, default: true]
  createdAt   timestamp     [not null]
  updatedAt   timestamp     [not null]
  deletedAt   timestamp

  Note: '''
  General definition of a product
  **Example**
  - Keyboard
  - Sneakers
  - Smartphone
  - Leather Jacket
  - Jeans Pants
  '''
}

Table Category {
  id               int           [pk, increment]
  name             varchar (50)  [not null]
  description      varchar (100) [not null]
  slug             varchar (50)  [not null, unique]
  parentCategoryId int
  showPage         boolean       [not null, default: true, note: 'Allow to see products with this category']
  active           boolean       [not null, default: true]
  createdAt        timestamp     [not null]
  updatedAt        timestamp     [not null]
  deletedAt        timestamp

  Note: '''
  Defines which group each product belongs to

  **Example**
  - Clothes
  - Wearable Gear
  - Car Parts
  - Food
  - Shoes
  '''
}

Table ProductCategory {
  id         int       [pk, increment]
  productId  int       [not null]
  categoryId int       [not null]
  createdAt  timestamp [not null]

  Note: '''
  Allows a product to contain one or more categories
  '''
}

Table UserProduct {
  id        bigint    [pk, increment]
  userId    uuid      [not null]
  productId int       [not null]
  active    boolean   [not null, default: true]
  createdAt timestamp [not null]
  updatedAt timestamp [not null]
  deletedAt timestamp

  Note: '''
  A Product to be sold by a user
  '''
}

Table Variation {
  id          int          [pk, increment]
  description varchar (50) [not null]
  active      boolean      [not null, default: true]
  createdAt   timestamp    [not null]
  updatedAt   timestamp    [not null]
  deletedAt   timestamp

  Note: '''
  Groups the variations of a product

  **Example**
  - Size
  - Color
  - Weight
  '''
}

Table VariationItem {
  id          int          [pk, increment]
  description varchar (50) [not null]
  variationId int          [not null]
  active      boolean      [not null, default: true]
  createdAt   timestamp    [not null]
  updatedAt   timestamp    [not null]
  deletedAt   timestamp

  Note: '''
  Variation options for a product

  **Example**
  - Size
    - Shirt
      - [Small, Medium, Large, sm, md, lg, xg, xxg]
    - Shoes
      - [36, 38, 39, 41]
  - Color
    - Mouse
      - [Red, Green, Blue]
    - Nail Polish
      - [Velvet Red, Pale Blue, Green Moss]
  '''
}

Table SKU {
  id        bigint          [pk, increment]
  name      varchar (50)    [not null]
  productId bigint          [not null]
  price     decimal (10, 2) [not null]
  quantity  int             [not null, default: 0]
  active    boolean         [not null, default: true]
  createdAt timestamp       [not null]
  updatedAt timestamp       [not null]
  deletedAt timestamp

  Note: '''
  The product itself, defined with all the custom variations
  '''
}

Table SKUVariation {
  id          bigint    [pk, increment]
  skuId       bigint    [not null]
  variationId int       [not null]
  createdAt   timestamp [not null]

  Note: 'Allows a product (sku) to contain one or more variations'
}

Ref: Category.id < Category.parentCategoryId
Ref: Product.id < ProductCategory.productId
Ref: Category.id < ProductCategory.categoryId
Ref: Product.id < UserProduct.productId
Ref: Variation.id < VariationItem.variationId
Ref: User.id < UserProduct.userId
Ref: UserProduct.id < SKU.productId
Ref: SKU.id < SKUVariation.skuId
Ref: Variation.id < SKUVariation.variationId
